PEH-9472 - header size and verticle gap fix

--- a/force-app/main/community-template-pp_2/common/lwc/ppOptOutAndTechnicalSupport/ppOptOutAndTechnicalSupport.css
+++ b/force-app/main/community-template-pp_2/common/lwc/ppOptOutAndTechnicalSupport/ppOptOutAndTechnicalSupport.css
@@ -174,7 +174,7 @@
     height: 24px;
     color: #444444;
     font-family: 'Proxima Nova';
-    font-size: 14px;
+    font-size: 16px;
     font-weight: bold;
     letter-spacing: 0;
     line-height: 24px;
@@ -218,7 +218,7 @@
 }
 
 .mb-14 {
-    margin-bottom: 30px;
+    margin-bottom: 14px;
 }
 
 .mb-20 {
